--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -74,8 +74,8 @@
 
 
         <%#=javascript_include_tag "IE/jquery-1.7.1.min"%>                                         
-        <%unless action_name == 'menu' %>
-          <%=javascript_include_tag "bootstrap-tree/jquery-1.8.2"%>                                         
+        <%unless action_name == 'menu' || action_name == 'delivery_report' %>
+          <%=javascript_include_tag "bootstrap-tree/jquery-1.8.2"%>
         <%end%>
         <%=javascript_include_tag "IE/bootstrap"%>                                         
         <script type="text/javascript">
