--- a/app/views/report/_stock_movement.html.erb
+++ b/app/views/report/_stock_movement.html.erb
@@ -9,9 +9,10 @@
 
     <!--script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script-->
     <%=javascript_include_tag "Charts/Highcharts/jquery.min"%>
+
     <script type="text/javascript">
 
-    function plotGraph() {
+    function plotGraph(drug) {
       results = document.getElementById('results').value;
       results = JSON.parse(results);
 
@@ -21,13 +22,18 @@
                 type: 'line'
             },
             title: {
-                text: ''
+                text: 'Stock Movement Report For ' +drug
             },
             subtitle: {
                 text: ''
             },
             xAxis: {
-                /*categories:  getDates(), */
+
+                type: 'datetime',
+                dateTimeLabelFormats: {
+                    day: '%e %b %y',
+                    week: '%e %b %y'
+                }
 
             },
             yAxis: {
@@ -44,6 +50,8 @@
             },
             tooltip: {
                 shared: true,
+                headerFormat: '<b>{point.y} Tins of {series.name}</b><br>',
+                pointFormat: 'on {point.x:%e. %b %Y}',
                 valueSuffix: ' Tins'
             },
             plotOptions: {
@@ -53,13 +61,15 @@
                     lineWidth: 2,
                     marker: {
                         lineWidth: 100,
-                        lineColor: '#666666'
+                        lineColor: '#000000'
                     }
                 }
             },
             series: [{
-                data: results
-            }],
+            name: drug,
+            data: dataG(),
+            negativeColor: 'red'
+        }],
             exporting: { enabled: false },
             credits: { enabled: false }
         });
@@ -68,6 +78,19 @@
 
   }
 
+    function dataG() {
+        results = document.getElementById('results').value;
+        results = JSON.parse(results);
+        
+        data = []
+        
+        for (i = 0; i < results.length; i++){
+            date = new Date(results[i][0])
+            data.push([Date.UTC(date.getFullYear(), date.getMonth(), date.getDay()) ,results[i][1]])
+        }
+
+        return data
+    }
     </script>
 
 
