--- a/app/views/report/index.html.erb
+++ b/app/views/report/index.html.erb
@@ -16,6 +16,7 @@
     cursor: pointer;
     float: left;
     min-height: 44px;
+    min-width: 260px !important;
     padding: 15px;
   }
 
@@ -68,7 +69,7 @@ img {
       <img class="introIcon" src="/images/stock_movement.gif">
       <div class="introItemText">
         <div class="introItemHeader">Stock movement</div>
-        <div>View how fast drugs are being dispensed.</div>
+        <div>View dispensation rates of drugs.</div>
       </div>
     </div>
 
@@ -76,7 +77,7 @@ img {
       <img class="introIcon" src="/images/d_icon.jpeg">
       <div class="introItemText">
         <div class="introItemHeader">Month of stock</div>
-        <div>View how fast drugs are being dispensed.</div>
+        <div>View the drug stock levels, consumption rate and projected stock out date.</div>
       </div>
     </div>
 
@@ -85,15 +86,15 @@ img {
 
  <div class="img-container">
 
-    <div class="introItem" onclick="window.location.href='/report/report_menu?type=delivery report'">
+    <div class="introItem" onclick="window.location.href='/report/delivery_report'">
       <img class="introIcon" src="/images/delivery.jpg">
       <div class="introItemText">
         <div class="introItemHeader">Delivery report</div>
-        <div>View how fast drugs are being dispensed.</div>
+        <div>View drugs delivered to a site on specific day.</div>
       </div>
     </div>
 
-    <div class="introItem" onclick="window.location.href='/report/Site physical stock'">
+    <div class="introItem" onclick="window.location.href='/report/physical_stock_summary'">
       <img class="introIcon" src="/images/aggregate.png">
       <div class="introItemText">
         <div class="introItemHeader">Site physical stock</div>
