--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     	<![endif]-->
 
-      <%= stylesheet_link_tag "footer.sticky" %>                                         
+      <%= stylesheet_link_tag "footer.sticky" %>
       <%= stylesheet_link_tag "IE/bootstrap" %>                                         
    		<style>
     		body{ padding-top: 60px; }
@@ -74,7 +74,7 @@
 
 
         <%#=javascript_include_tag "IE/jquery-1.7.1.min"%>                                         
-        <%unless action_name == 'menu' || action_name == 'delivery_report' %>
+        <%unless action_name == 'menu' || @nojquery %>
           <%=javascript_include_tag "bootstrap-tree/jquery-1.8.2"%>
         <%end%>
         <%=javascript_include_tag "IE/bootstrap"%>                                         
