--- a/app/views/report/delivery_report.erb
+++ b/app/views/report/delivery_report.erb
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE HTML>
 <style>
     .td-heading {
         width: 100px;
@@ -6,7 +6,9 @@
 
 </style>
 <%=javascript_include_tag "bootstrap-tree/jquery-1.8.2"%>
-<script type="text/javascript" language="javascript" src="/javascripts/DataTables/jquery.dataTables.js"></script>
+<script type="text/javascript" src="/javascripts/zebra_datepicker.js"></script>
+<link rel="stylesheet" href="/stylesheets/default.css" type="text/css">
+
 <div class="container-fluid">
   <div class="row-fluid">
     <div class="span3">
@@ -53,11 +55,11 @@
             </tr>
             <tr>
               <td class="td-heading"><label>Select Date:</label></td>
-              <td><input id="selected_date" type="text"/></td>
+              <td><input id="selected_date" type="text" placeholder="Select Date" onclick="position_datepicker(this)"/></td>
             </tr>
             <tr>
               <td class="td-heading">
-                <br />
+
                 <input type="submit" class="btn btn-success" value="Submit" onclick="display_report()" style="width: 100%;" />
               </td>
             </tr>
@@ -79,10 +81,23 @@
 <%=javascript_include_tag "bootstrap-tree/bootstrap.min"%>
 <%=javascript_include_tag "bootstrap-tree/bootstrap-tree"%>
 <%= stylesheet_link_tag "bootstrap-tree/bootstrap-tree" %>
-
+<%= stylesheet_link_tag "data_tables" %>
+<script type="text/javascript" language="javascript" src="/javascripts/DataTables/jquery.dataTables.js"></script>
+<script type="text/javascript" language="javascript" src="dataTables.numericComma.js"></script>
 <script>
 
 
+    function display_picker(e){
+
+       $('#selected_date').Zebra_DatePicker({format: "d-M-Y", offset: [-220, (jQuery('#selected_date').position().top * 2)]});
+
+    }
+    setTimeout(display_picker, 2);
+
+    function position_datepicker(element)
+    {
+
+    }
     function setSelectedValue(value) {
         label = document.getElementById('selection-label');
         label.innerHTML = value;
@@ -131,7 +146,10 @@
                 'iDisplayLength': 20,
                 "bLengthChange": false,
                 "bPaginate": false,
-                "bFilter": false
+                "bFilter": false,
+                "columnDefs": [
+                    { "type": "numeric-comma", targets: 1 }
+                ]
             });
 
         }
