--- a/app/views/report/physical_stock_summary.html.erb
+++ b/app/views/report/physical_stock_summary.html.erb
@@ -92,8 +92,17 @@
 <%#=javascript_include_tag "bootstrap-tree/jquery-1.8.2"%>
 <%=javascript_include_tag "bootstrap-tree/bootstrap.min"%>
 <%=javascript_include_tag "bootstrap-tree/bootstrap-tree"%>
+<script type="text/javascript" src="/javascripts/zebra_datepicker.js"></script>
+<link rel="stylesheet" href="/stylesheets/default.css" type="text/css">
 
 <script>
+    function display_picker(e){
+
+        $('#start_date').Zebra_DatePicker({format: "d-M-Y", offset: [-220, (jQuery('#start_date').position().top * 1.4)]});
+
+    }
+    setTimeout(display_picker, 2);
+
     function setSelectedValue(value) {
         label = document.getElementById('selection-label');
         label.innerHTML = value;
