--- a/app/views/user/edit.html.erb
+++ b/app/views/user/edit.html.erb
@@ -1,6 +1,8 @@
-<link rel="stylesheet" type="text/css" href="/stylesheets/demo_table.css" />
+<link rel="stylesheet" type="text/css" href="/stylesheets/data_tables.css" />
+<link rel="stylesheet" type="text/css" href="/stylesheets/jquery.alerts.css" />
 <script type="text/javascript" language="javascript" src="/javascripts/jquery.js"></script>
-<script type="text/javascript" language="javascript" src="/javascripts/jquery.dataTables.js"></script>
+<script type="text/javascript" language="javascript" src="/javascripts/jquery.alerts.js"></script>
+<script type="text/javascript" language="javascript" src="/javascripts/DataTables/jquery.dataTables.js"></script>
 <script type="text/javascript" charset="utf-8">
     $(document).ready(function() {
         $('#articles').dataTable({
@@ -12,30 +14,15 @@
 </script>
 
 <style type="text/css">
-    div{
-        font-size: 25px;
-        font-family: arial;
 
-    }
-    th{
-        font-size: 25px;
-        font-family: arial;
-        font-weight: bold;
-
-    }
-    input{
-        font-size: 24px;
-        font-family: arial;
-
-    }
     img.icon{
-        height: 40px;
-        width: 40px;
+        height: 20px;
+        width: 20px;
     }
 </style>
 
-<div style="margin-top: 10px;">
-<table class="display" id='articles' width="100%">
+<div >
+<table class="display" id='articles' width="100%" cellspacing="2px">
 <thead>
 <tr>
   <th style="text-align: left">User Name</th>
@@ -47,10 +34,10 @@
 </tr>
 </thead>
 <tbody>
-    <% @user.each do |user| %>
-        <tr class='<%= cycle("even gradeC", "odd gradeX") %>'>
+    <% (@user || []).each do |user| %>
+        <tr id="<%= user.id%>" class='<%= cycle("even gradeC", "odd gradeX") %>'>
            <td><%= user.username %></td>
-           <td><%= user.user_role.role.role %></td>
+           <td><%= user.user_role.role.role rescue " " %></td>
           <td><%= user.updated_at.to_date %></td>
           <td style="text-align: center;">
             <img onmousedown="delete_user(<%= user.id%>)" class="icon" src="/images/close.png" alt="view">
@@ -76,7 +63,8 @@
                 type:"POST",
                 success: function(msg){
                     jAlert(msg, "User Deletion Outcome")
-                    clear()
+                    var row = document.getElementById(id)
+                    row.parentNode.removeChild(row)
                 },
                 error: function(){
                     jAlert("Could not delete user", "Unsuccessful!");
