--- a/app/views/administration/edit_site.html.erb
+++ b/app/views/administration/edit_site.html.erb
@@ -1,3 +1,7 @@
+<link rel="stylesheet" type="text/css" href="/stylesheets/application.css" xmlns="http://www.w3.org/1999/html"/>
+<script type="text/javascript" src="/javascripts/jquery.js"></script>
+<script type="text/javascript" src="/javascripts/jquery.validate.min.js"></script>
+
 <style type="text/css">
     td {
         padding: 10px !important;
@@ -13,13 +17,11 @@
     }
 </style>
 
-<div class="container theme-showcase" role="main">
-
-<div class="panel panel-default">
-  <div class="panel-heading">
-    <h3 class="panel-title">Edit Site</h3>
+<div class="panel">
+  <div class="panel-title">
+    <span>Edit Site</span>
   </div>
-  <div class="panel-body">
+  <div class="panel-content">
 
     <%= form_tag('/administration/save_site', :method => 'post', :enctype => 'multipart/form-data',
                  :id => 'site-form', :class => "form-horizontal", :autocomplete => "off",:role => "form", :novalidate=> "novalidate") do %>
@@ -129,7 +131,7 @@
 
   </div>
 </div>
-</div>
+
 
 <script defer="true">
     var sites = {};
@@ -172,7 +174,19 @@
         $(document).ready(function(){
 
             $('#site-form').validate({
-                rules: {},
+                rules: {
+                    sitename: {required: true},
+                    ip_address:{required: true},
+                    port: {required: true},
+                    threshold:{required: true},
+                    region:{required: true}
+                },
+                messages: {
+                    sitename: {required: "Please provide a name for the site"},
+                    ip_address: {required: "Please provide an IP Address for the site"},
+                    port: {required: "Please provide the port for the application"},
+                    region: {required: "Please select the region for the site"}
+                },
                 highlight: function(element) {
                     $(element).closest('.control-group').removeClass('success').addClass('error');
                 },
